Remove MaxPermSize parameter from surefire memory configuration.